Adding device to database is now working. The ViewHolder get all devices and show them in MainActivity